--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,13 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
+    { "src": "api/index.js", "use": "@vercel/node" }
   ],
   "routes": [
     {
       "src": "/glowybot",
       "methods": ["POST"],
-      "dest": "/index.js"
+      "dest": "api/index.js"
     }
   ]
 }
