--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "routes": [
     {
       "src": "/glowybot",
-      "methods": ["POST"],
+      "methods": ["POST", "OPTIONS"],
       "dest": "api/index.js"
     }
   ]
