--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,19 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/index.js", "use": "@vercel/node" }
+    { "src": "api/index.js", "use": "@vercel/node" },
+    { "src": "glowybot.html", "use": "@vercel/static" }
   ],
   "routes": [
     {
       "src": "/glowybot",
       "methods": ["POST", "OPTIONS"],
       "dest": "api/index.js"
+    },
+    {
+      "src": "/glowybot.html",
+      "dest": "glowybot.html"
     }
   ]
 }
+
